<resources>
    <string name="app_name">Covid</string>
    <string name="inicio">Iniciar Sesión</string>
    <string name="registro">Crear Cuenta</string>
    <string name="covid">COVID 19</string>
    <string name="Crearcuenta">Crear Cuenta</string>
    <string name="username">Usuario</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="passwordcon">Confirma Contraseña</string>
    <string name="save">Guardar</string>
    <string name="TengoCuenta">¿Tienes una cuenta? Inicia Sesión</string>
    <string name="NoTengoCuenta">¿No Tienes una cuenta? Registrate</string>
    <string name="InicioSesion">Inicio de Sesión</string>
    <string name="IniciarSesion">Iniciar de Sesión</string>
    <string name="Continente">Seleccione el continente</string>
    <string name="SeleccionePais">Seleccione un Pais</string>
    <string name="Pais">Pais</string>
    <string name="facebook_app_id">552253505414843</string>
    <string name="fb_login_protocol_scheme">fb552253505414843</string>
    <string name="Country">País</string>
    <string name="NewConfirmed">Nuevos Casos Confirmados</string>
    <string name="TotalConfirmed">Total de Casos Confirmados</string>
    <string name="NewDeaths">Nuevas Muertes</string>
    <string name="TotalDeaths">Total de Muertes</string>
    <string name="NewRecovered">Nuevos Recuperados</string>
    <string name="TotalRecovered">Total de Recuperados</string>
    <string name="numeros">Numeros</string>
    <string name="map_key" translatable="false">AIzaSyBOQEMECH-5CFE3oqF65Sp0qEHiYx9KgX0</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
